--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_animate: ^4.2.0+1
   motion: ^1.4.0
   google_fonts: ^6.1.0
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
