--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
+  fonts:
+    - family: Josefin Sans
+      fonts:
+        - asset: lib/fonts/TiroBangla-Regular.ttf
+
+
+
+
+
   # fonts:
   #   - family: Schyler
   #     fonts:
