--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,6 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   lottie: ^2.4.0
   shared_preferences: ^2.2.0
-  internet_connection_checker: ^1.0.0+1
-  flutter_rating_bar: ^4.0.1
-  dotted_line: ^3.2.2
-  expandable: ^5.0.1
   circular_profile_avatar: ^2.0.5
   syncfusion_flutter_datepicker: ^22.1.39
   awesome_snackbar_content: ^0.1.1  
@@ -60,8 +56,6 @@ dependencies:
   path_provider: ^2.1.1
   hive_flutter: ^1.1.0
   awesome_dialog: ^3.1.0
-  geolocator: ^10.1.0
-  geocoding: ^2.1.1
   webview_flutter: ^4.4.1
   popover: ^0.2.8+2
   flutter_animate: ^4.2.0+1
@@ -69,11 +63,31 @@ dependencies:
   google_fonts: ^6.1.0
   percent_indicator: ^4.2.3
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
+  flutter_launcher_icons: ^0.13.1
+
+
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+
+  color: "#FFFFFF"
+  image: "lib/images/uttaron_logo_splash.png"
+
+
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/images/uttaron_logo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
