--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,7 +87,14 @@ flutter_native_splash:
 flutter_icons:
   android: true
   ios: true
+  web:
+    generate: true
+    image_path: "lib/images/uttaron_logo.png"
   image_path: "lib/images/uttaron_logo.png"
+  windows:
+    generate: true
+    image_path: "lib/images/uttaron_logo.png"
+    icon_size: 48 # min:48, max:256, default: 48
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
