--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   motion: ^1.4.0
   google_fonts: ^6.1.0
   percent_indicator: ^4.2.3
+  timezone: ^0.9.2
+  flutter_local_notifications: ^16.1.0
+  rxdart: ^0.27.7
+  flutter_timezone: ^1.0.8
 
 
 dev_dependencies:
